--- a/package.json
+++ b/package.json
@@ -9,14 +9,43 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-picker/picker": "^2.11.1",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
+    "@supabase/supabase-js": "^2.55.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.20",
+    "expo-file-system": "^18.1.11",
+    "expo-image-picker": "^16.1.4",
+    "expo-notifications": "^0.31.4",
+    "expo-print": "^14.1.4",
+    "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.17",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-dom": "19.0.0",
+    "react-hook-form": "^7.62.0",
+    "react-native": "0.79.5",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.20.0",
+    "styled-components": "^6.1.19",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "expo-module-scripts": "^4.1.10",
     "typescript": "~5.8.3"
   },
   "private": true
