--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "@supabase/supabase-js": "^2.55.0",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-notifications": "^0.31.4",
@@ -31,10 +31,12 @@
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "react-native-screens": "~4.11.1",
+    "react-native-gesture-handler": "~2.24.0"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
