--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-svg": "15.9.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
-    "styled-components": "^6.1.19",
-    "react-native-screens": "~4.11.1",
-    "react-native-gesture-handler": "~2.24.0"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
