--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-svg": "15.9.0",
+    "react-native-svg": "15.11.2",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -43,6 +43,18 @@
   "devDependencies": {
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-chart-kit",
+          "react-native-vector-icons",
+          "styled-components"
+        ],
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
